<resources>
    <string name="app_name">Stream-ON</string>
    <string name="search_movie">Search Movie</string>
    <string name="search">Search</string>
    <string name="cover">Cover</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="search_settings">Search Settings</string>
    <string name="germany">Germany</string>
    <string name="usa">United States of America</string>
    <string name="search_in_country">Search in Country</string>
    <string name="include_the_following_services">Include the following services</string>
    <string name="netflix">Netflix</string>
    <string name="amazon_prime">Amazon Prime</string>
    <string name="disney">Disney</string>
    <string name="hulu">Hulu</string>
    <string name="peacock">Peacock</string>
    <string name="paramount">Paramount</string>
    <string name="starz">Starz</string>
    <string name="showtime">Showtime</string>
    <string name="apple">Apple</string>
    <string name="mubi">Mubi</string>
    <string name="hbo">HBO</string>
    <string name="genres">Genres:</string>
    <string name="imdb_rating">IMDB Rating:</string>
    <string name="imdb_id">IMDB ID:</string>
    <string name="available_on">Available on:</string>
    <string name="release_year">Release Year:</string>
    <string name="runtime">Runtime</string>
    <string name="country_of_origin">Country of origin:</string>
    <string name="original_movie_title">Original Movie Title:</string>
    <string name="original_language">Original Language:</string>
    <string name="cast">Cast:</string>
    <string name="something_went_wrong">Something went wrong. Please try again later or change your search term.</string>
</resources>