<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_mainActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:menu="@menu/action_bar_main_activity"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/search_in_country"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_germany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/germany"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_usa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usa"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/include_the_following_services"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollHorizontally="false"
        android:stretchColumns="1"
        android:textColor="@color/black">

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_netflix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:checked="true"
                android:text="@string/netflix"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_prime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/amazon_prime"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_disney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/disney"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_hbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hbo"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_hulu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hulu"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_peacock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/peacock"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_paramount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/paramount"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_starz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/starz"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_showtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/showtime"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/apple"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_mubi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/mubi"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="Save Search Settings"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>